# agpm

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE.md  Makefile  README.md  USAGE.md  agpm.toml  ccpm.toml  cliff.toml  rustfmt.toml
.agpm/snippets/: attribution.md  rust-best-practices.md
.claude/: improve-documentation.md  improve-test-coverage.md  pr-review.md
.claude/agents/: README.md  rust-doc-advanced.md  rust-doc-expert.md  rust-doc-standard.md  rust-expert-advanced.md  rust-expert-standard.md  rust-expert.md  rust-linting-advanced.md  rust-linting-expert.md  rust-linting-standard.md  rust-test-advanced.md  rust-test-fixer.md  rust-test-standard.md  rust-troubleshooter-advanced.md  rust-troubleshooter-opus.md  rust-troubleshooter-standard.md
.claude/commands/: checkpoint.md  commit.md  execute.md  fact-check-docs.md  gh-pr-create.md  lint.md  pr-self-review.md  squash.md  update-all.md  update-claude.md  update-docs-review.md  update-docs.md  update-docstrings.md  update-readme.md
.claude/snippets/: test-snippet.md
.config/: nextest.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml  trigger-release.yml  update-release-notes.yml
.opencode/agent/: rust-doc-advanced.md  rust-doc-standard.md  rust-expert-advanced.md  rust-expert-standard.md  rust-expert.md  rust-linting-advanced.md  rust-linting-standard.md  rust-test-advanced.md  rust-test-standard.md  rust-troubleshooter-advanced.md  rust-troubleshooter-standard.md
.opencode/command/: checkpoint.md  commit.md  execute.md  fact-check-docs.md  gh-pr-create.md  lint.md  pr-self-review.md  squash.md  update-all.md  update-claude.md  update-docs.md  update-docstrings.md
docs/: architecture.md  command-reference.md  configuration.md  dependencies.md  faq.md  installation.md  manifest-reference.md  multi-tool-support.md  resources.md  skills-guide.md  templating.md  troubleshooting.md  user-guide.md  versioning.md
docs/examples/: README.md  advanced.toml  basic-project.toml  committed-resources.toml  local-only-setup.toml  multi-tool.toml  patches-private.toml  patches.toml  pattern-matching.toml  private-setup.toml  skills.toml
examples/: cleanup_project.sh  demo_error_output.rs  setup_project.sh  test_error_messages.rs  test_templating.rs
local-deps/snippets/: rust-best-practices.md  rust-cargo-commands.md
scripts/: generate-release-notes.sh
src/: constants.rs  installer.rs  lib.rs  main.rs  pattern.rs
src/cache/: lock.rs  lock_manager.rs  mod.rs
src/cli/: add.rs  cache.rs  common.rs  config.rs  init.rs  install.rs  install_tests.rs  list.rs  mcp.rs  migrate.rs  mod.rs  outdated.rs  remove.rs  resource_ops.rs  tests.rs  tree.rs  update.rs  update_tests.rs  upgrade.rs  validate.rs
src/config/: agent.rs  global.rs  mod.rs  parser.rs
src/core/: error.rs  error_builders.rs  error_formatting.rs  error_helpers.rs  file_error.rs  mod.rs  operation_context.rs  resource.rs  resource_iterator.rs
src/git/: command_builder.rs  mod.rs  tests.rs
src/hooks/: merge.rs  mod.rs
src/installer/: cleanup.rs  config_check.rs  context.rs  gitignore.rs  gitignore_tests.rs  mod.rs  project_lock.rs  resource.rs  selective.rs  skills.rs  tests.rs
src/lockfile/: checksum.rs  dependency_reference.rs  helpers.rs  io.rs  lockfile_dependency_ref.rs  mod.rs  patch_display.rs  private_lock.rs  resource_ops.rs  tests.rs  validation.rs
src/manifest/: dependency_spec.rs  helpers.rs  manifest_flatten_tests.rs  manifest_hash_tests.rs  manifest_io.rs  manifest_mutable_tests.rs  manifest_mutations.rs  manifest_queries.rs  manifest_template_tests.rs  manifest_tests.rs  manifest_tool_tests.rs  manifest_validation.rs  manifest_validation_tests.rs  mod.rs  patches.rs  resource_dependency.rs  resource_dependency_tests.rs  tool_config.rs  tool_config_tests.rs
src/markdown/: frontmatter.rs  mod.rs  reference_extractor.rs
src/mcp/: config.rs  handlers.rs  mod.rs  models.rs  operations.rs  settings.rs
src/metadata/: extractor.rs  mod.rs
src/models/: mod.rs
src/resolver/: backtracking.rs  conflict_service.rs  dependency_graph.rs  dependency_helpers.rs  dependency_processing.rs  entry_builder.rs  incremental_update.rs  install_path_resolver.rs  lockfile_builder.rs  lockfile_operations.rs  mod.rs  mod.rs.backup  path_helpers.rs  path_resolver.rs  pattern_expander.rs  redundancy.rs  resource_service.rs  sha_conflict_detector.rs  skills.rs  source_context.rs  tests.rs  transitive_extractor.rs  transitive_resolver.rs  types.rs  version_resolution.rs  version_resolver.rs  worktree_manager.rs
src/skills/: mod.rs  patches.rs
src/source/: mod.rs
src/templating/: cache.rs  content.rs  context.rs  dependencies.rs  error.rs  filters.rs  mod.rs  renderer.rs  renderer_tests.rs  utils.rs
src/test_utils/: builder.rs  environment.rs  fixtures.rs  git_helper.rs  mod.rs
src/tokens/: mod.rs
src/upgrade/: backup.rs  config.rs  mod.rs  self_updater.rs  tests.rs  verification.rs  version_check.rs
src/utils/: backoff.rs  fs.rs  manifest_utils.rs  mod.rs  path_validation.rs  platform.rs  (+2 more)
tests/: integration_cache_behavior.rs  integration_conflict_detection.rs  integration_cross_platform.rs  integration_deploy.rs  integration_deps_refresh.rs  integration_error_scenarios.rs  integration_file_url.rs  integration_gitignore.rs  integration_hooks.rs  integration_incremental_add.rs  integration_install_new.rs  integration_list.rs  integration_lockfile_staleness.rs  integration_max_parallel_flag.rs  integration_multi_artifact.rs  integration_multi_resource.rs  integration_outdated.rs  integration_parallelism_stress.rs  integration_pattern.rs  integration_redundancy.rs  integration_stress_test.rs  integration_test_helpers_example.rs  integration_transitive.rs  integration_tree.rs  integration_upd_progress.rs  integration_update.rs  integration_upgrade.rs  integration_validate.rs  integration_validate_new.rs  integration_versioning.rs  integration_worktree_simple.rs  prefixed_versions_integration.rs  test_config.rs  test_no_progress.rs  test_semaphore_verification.rs
(+309 files in other folders)
