[package]
name = "ccpm"
version = "1.1.0"
edition = "2024"
authors = ["Aaron Griffin <aig787@icloud.com>"]
description = "Claude Code Package Manager - A Git-based package manager for Claude agents"
license = "MIT"
repository = "https://github.com/aig787/ccpm"
readme = "README.md"
keywords = ["claude", "ai", "package-manager", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
test-utils = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tokio = { version = "1.40", features = ["full"] }
toml = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0.16"
colored = "3.0.0"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.0"
tempfile = "3.10"
semver = "1.0"
shellexpand = "3.1"
which = "8.0.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
futures = "0.3"
fs4 = "0.13"
glob = "0.3"
once_cell = "1.21.3"
dashmap = "6.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
ccpm = { path = ".", features = ["test-utils"] }
serial_test = "3.2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
