[package]
name = "ccpm"
version = "0.3.9"
edition = "2024"
authors = ["Aaron Griffin <aig787@icloud.com>"]
description = "Claude Code Package Manager - A Git-based package manager for Claude agents"
license = "MIT"
repository = "https://github.com/aig787/ccpm"
readme = "README.md"
keywords = ["claude", "ai", "package-manager", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
test-utils = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tokio = { version = "1.40", features = ["full"] }
toml = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0.16"
colored = "3.0.0"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.0"
tempfile = "3.10"
semver = "1.0"
shellexpand = "3.1"
which = "8.0.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
futures = "0.3"
fs4 = "0.13"
glob = "0.3"
once_cell = "1.21.3"
dashmap = "6.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
ccpm = { path = ".", features = ["test-utils"] }
serial_test = "3.2.0"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether CI should trigger releases with dispatches instead of tag pushes
dispatch-releases = true
# Publish to crates.io on release
publish-to = ["crates"]
# Use git cliff for changelog generation
changelog = "cliff"

# cargo-binstall metadata for binary installation
[package.metadata.binstall]
pkg-url = "https://github.com/aig787/ccpm/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
