[package]
name = "agpm-cli"
version = "0.4.9"
edition = "2024"
rust-version = "1.85.0"
authors = ["Aaron Griffin <aig787@icloud.com>"]
description = "AGent Package Manager - A Git-based package manager for coding agents"
license = "MIT"
repository = "https://github.com/aig787/agpm"
homepage = "https://github.com/aig787/agpm"
readme = "README.md"
keywords = ["claude", "ai", "package-manager", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

# Keep binary name as "agpm" for user convenience
[[bin]]
name = "agpm"
path = "src/main.rs"

# Integration test suite (fast, runs in CI)
[[test]]
name = "integration"
path = "tests/integration/mod.rs"

# Stress test suite (slow, manual execution only)
[[test]]
name = "stress"
path = "tests/stress/main.rs"

[features]
default = []
test-utils = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tokio = { version = "1.40", features = ["full"] }
toml = "0.9.5"
toml_edit = { version = "0.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
gray_matter = "0.3.2"
anyhow = "1.0"
thiserror = "2.0.16"
colored = "3.0.0"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.0"
tempfile = "3.10"
semver = "1.0"
shellexpand = "3.1"
which = "8.0.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
futures = "0.3"
fs4 = "0.13"
glob = "0.3"
dashmap = "6.1"
reqwest = { version = "0.12", features = ["json"] }
zip = "6.0.0"
petgraph = "0.8.2"
pubgrub = { version = "0.3.0", default-features = false }
tokio-retry = "0.3.0"
tera = "1.20"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
agpm-cli = { path = ".", features = ["test-utils"] }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether CI should trigger releases with dispatches instead of tag pushes
dispatch-releases = true
# Post-announce jobs to run in CI
post-announce-jobs = ["./update-release-notes", "./publish-crates"]
# A GitHub repo to push Homebrew formulas to
tap = "aig787/homebrew-agpm"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

# cargo-binstall metadata for binary installation
[package.metadata.binstall]
pkg-url = "https://github.com/aig787/agpm/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
